k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: speedjobs-server
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: speedjobs-server-ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: speedjobs-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'speedjobs-server-ingress.skala25a.project.skala-ai.com'
    secretName: speedjobs-server-ingress-project-tls-cert
